完成自动生成sql建表语句逻辑

--- a/spirit-plug/src/main/resources/mapper.vm
+++ b/spirit-plug/src/main/resources/mapper.vm
@@ -106,7 +106,7 @@
 #elseif(${field.range} == true)
 			<if test="${field.property}Lower != null and ${field.property}Lower != ''">$!{prefix}${field.column} &gt;= #{${field.property}Lower}</if>
 			<if test="${field.property}Upper != null and ${field.property}Upper != ''">$!{prefix}${field.column} &lt;= #{${field.property}Upper}</if>
-#elseif(${field.enums} == true)
+#elseif(${field.type} == "ENUM")
 			<if test="${field.property} != null>$!{prefix}${field.column} in
 				<foreach collection="${field.property}" index="index" item="item" open="(" separator="," close=")">
 					#{item}
