添加生成dao的模板

--- a/spirit-plug/src/main/resources/mapper.vm
+++ b/spirit-plug/src/main/resources/mapper.vm
@@ -23,7 +23,7 @@
 ##======================================================================================
 
 ##======================================================================================
-	<insert id="save" parameterType="${voClassName}" resultType="java.lang.Integer">
+	<insert id="save" parameterType="${voClassName}">
 		insert into ${tableName} (<include refid="columns" />) values
 		(null,
 #foreach(${field} in ${fields})
@@ -106,7 +106,7 @@
 #elseif(${field.range} == true)
 			<if test="${field.property}Lower != null and ${field.property}Lower != ''">$!{prefix}${field.column} &gt;= #{${field.property}Lower}</if>
 			<if test="${field.property}Upper != null and ${field.property}Upper != ''">$!{prefix}${field.column} &lt;= #{${field.property}Upper}</if>
-#elseif(${field.type} == "ENUM")
+#elseif(${field.jdbcType} == "ENUM")
 			<if test="${field.property} != null>$!{prefix}${field.column} in
 				<foreach collection="${field.property}" index="index" item="item" open="(" separator="," close=")">
 					#{item}
